src/App.css
@font-face {
  font-family: 'Anderson Grotesk UltraBold';
  src: local('Anderson Grotesk UltraBold'),
    url(fonts/AndersonGrotesk-Ultrabold.otf) format('opentype');
  font-weight: 800;
}

@font-face {
  font-family: 'Anderson Grotesk Bold';
  src: local('Anderson Grotesk Bold'),
    url(fonts/AndersonGrotesk-Bold.otf) format('opentype');
  font-weight: 600;
}

@font-face {
  font-family: 'Anderson Grotesk';
  src: local('Anderson Grotesk'),
    url(fonts/AndersonGrotesk.otf) format('opentype');
  font-weight: 400;
}
  
html {
  /* Load system fonts */
  font-family: Inter, -apple-system, BlinkMacSystemFont, San Francisco, Roboto,
    Segoe UI, Helvetica Neue, sans-serif;
  font-size: 16px;
  color: #31393c;
  background: #ffffff;
  scroll-behavior: smooth;

  /* Make type rendering look crisper */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  /* Disable auto-enlargement of small text in Safari */
  text-size-adjust: 100%;

  /* Enable kerning and optional ligatures */
  text-rendering: optimizeLegibility;

  box-sizing: border-box;
}

#heading {
  font-family: "Anderson Grotesk UltraBold", sans-serif;
  background-image: url("./Images/Background-Top.png");
  background-position: center;
  background-size: cover;
  width: 100%;
  /*height: 45vh;*/
  color: rgb(247, 247, 247);
  border-bottom-left-radius: 25px;
  margin-top:-23px;
  
}

#title{
  padding-left: 35px;
  margin-top: 65px;
  margin-bottom: 5px;
  font-size: 73px;
  display: inline-block;
}

#back-bottom{
  width: 500px;
  float:right;
  margin-top: -0.5vh;
  position:relative;
}

#subtitles{
  margin-left: 20px;
  margin-right: 500px;
  color:black;
  font-family: "Anderson Grotesk Bold";
  font-size: 35px;
  padding-top: 20px;
  text-align:center;
}

#form{
  align-items: center;
  justify-content: center;
  margin-bottom: 10px;
  margin-top: 50px;
}


#info{
  margin-top: 100px;
  margin-left: 100px;
  margin-right: 100px;
  margin-bottom: 50px;
  font-family: "Anderson Grotesk";
  text-align:center;
  font-size: 40px;
  color:black;
}

#input{
  margin-top: px;
  width: 40%;
  font-size: 35px;
  height: 80px;
  text-align:center;
  font-family: "Anderson Grotesk";
  border-color: black;
  color:black;
  border-width: 1.5px;
  border-color: gray;
}

#inputbutton{
  font-size: 35px;
  height: 80px;
  width: 80px;
  margin-left: 25px;
  border-width: 3px;
  border-color: rgb(255,213,79);
  --bs-btn-color: rgb(255,213,79);
  --bs-btn-hover-color: white;
  --bs-btn-hover-bg: black;
  --bs-btn-hover-border-color: rgb(255,255,255);
  --bs-btn-active-bg: white;
  --bs-btn-active-color: rgb(255,213,79);
}

#Buttons{
  margin-top: 50px;
  margin-bottom: 200px;
}

#SearchResults{
  margin-left: 10px;
  margin-right: 10px;
  padding-left:50px;
  padding-right: 50px;
  /*width:100%;*/
  font-family: "Anderson Grotesk";
  text-align: center;
  font-size: 30px;
  border-radius: 50px;
  margin-bottom: 30px;
}

#alert{
  width:300px;
  font-family: "Anderson Grotesk";
  font-size: 25px;
  margin-right: 50px;
}

#statistics{
  margin-left: 70px;
}

#courseTitles{
  text-align: center;
  flex-wrap: wrap;
  position: relative;
  padding-bottom: 20px;
  justify-content: center;
  align-items: center;
}

#nextInfo{
  height: 100vh;
}

#mainCard{
  margin-left: 40px;
  border-radius: 20px;
  width: 500px;
  height: 470px;
  margin-top:-10px;
}

#displayedInfo{
  align-items: center;
  justify-content: center;
  position:relative;
  display: flex; 
}

#returnButton{
  text-align: center;
  position: relative;
  top: 100px;
  left: -400px;
}

#backUpButton{
  font-size: 25px;
}

.fade {
  opacity: 0;
  transition: opacity 0.1s ease-out;
}

.show {
  opacity: 1;
}

.hide {
  opacity: 0;
}

.container {
  display: -webkit-flexbox;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-flex-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  align-items: center;
  justify-content: center;
  position:relative;
  flex-wrap: wrap;
}

body {
  overflow-x: hidden;
}

input[type=text]::-ms-clear {  display: none; width : 0; height: 0; }
input[type=text]::-ms-reveal {  display: none; width : 0; height: 0; }
input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration { display: none; }

input:focus::placeholder {
  color: transparent;
}

